# llm-service

./: Dockerfile  README.md  pyproject.toml  run.sh
app/: main.py
app/schemas/: schemas.py
