[tool.poetry]
name = "llm-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bitsandbytes = "^0.41.1"
transformers = "^4.34.0"
accelerate = {git = "https://github.com/huggingface/accelerate.git"}
fastapi = "^0.103.2"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
