[tool.poetry]
name = "llm-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bitsandbytes = "^0.41.1"
transformers = "4.30"
accelerate = {git = "https://github.com/huggingface/accelerate.git"}
fastapi = "^0.103.2"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl"}
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
